ATRAC3 playback is broken
Playing track 25 of this file with --demux avformat works, but fails to render any audio with our demuxer.
http://streams.videolan.org/misc/test-files-ccc/%5bCCCP%5d_Mega_Weird_Audio_Test.mkv
Using --audio-track-id 25
Playing track 25 of this file with --demux avformat works, but fails to render any audio with our demuxer.
http://streams.videolan.org/misc/test-files-ccc/%5bCCCP%5d_Mega_Weird_Audio_Test.mkv
Using --audio-track-id 25
VideoLAN code repository instance