MKV: fix ATRAC3 playback

Fixes #14205

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>